--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+.option_navbar{
+  width: 300px;
+  height: 318.349px;
+}
+.admin_image{
+  width: 200px;
+  height: 200px;
+}
