--- a/src/App.css
+++ b/src/App.css
@@ -44,3 +44,50 @@
   width: 200px;
   height: 200px;
 }
+
+
+
+.table_background {
+  display: flex;
+  background-color: white;
+  margin-left: 3vw;
+  margin-right: 3vw;
+  margin-bottom: 10vh;
+  margin-top: 5vh;
+  box-shadow: 0px 0px 10px rgba(114, 114, 113, 0.5);
+  border-radius: 15px;
+}
+
+table {
+  font-family: futura-pt, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  border-collapse: collapse;
+  width: 100%;
+  border-radius: 15px;
+
+  /* add this */
+  overflow: hidden
+}
+
+th {
+  font-size: 18px;
+  text-align: left;
+  padding: 20px 20px 20px 20px;
+}
+
+table,
+td {
+  padding: 8px 8px 8px 20px;
+}
+
+tr {
+  background-color: #eff2f5;
+}
+th{
+  background-color: #B9B9B9;
+}
+
+.data:hover {
+  background-color: rgba(114, 114, 113, 0.2);
+}
