--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.tooltip {
+  @apply invisible absolute;
+}
+
+.has-tooltip:hover .tooltip {
+  @apply visible z-50;
+}
+.add-btn {
+  @apply bg-principal  fill-white  px-4 py-2 flex text-white items-center gap-2 rounded-lg
+}
+@tailwind utilities;
